*Empty MediaWiki Message*

--- a/Sánzá_ya_mwambe.mw
+++ b/Sánzá_ya_mwambe.mw
@@ -1,2 +1,6 @@
-{{sánzá}}
 {{sánzá ya mwambe}}
+'''Sánza ya mwambe''' tǒ '''ogusiti''' ezalí [[sánzá (ntángo)|sánzá]] ya mwambe o [[manáka]]. Ezalí na [[mokɔlɔ|mikɔlɔ]] ntúku misáto na mɔ̌kɔ́ (31).
+
+{{sánzá}}
+[[en:August]]
+[[fr:août]]
