*Empty MediaWiki Message*

--- a/Sánzá_ya_zómi.mw
+++ b/Sánzá_ya_zómi.mw
@@ -1,2 +1,6 @@
-{{sánzá}}
 {{sánzá ya zómi}}
+'''Sánza ya zómi''', tǒ '''oktobele''' mpé '''ɔkɔtɔbɛ''', ezalí [[sánzá (ntángo)|sánzá]] ya zómi o [[manáka]]. Ezalí na [[mokɔlɔ|mikɔlɔ]] ntúku misáto na mɔ̌kɔ́ (31).
+
+{{sánzá}}
+[[en:October]]
+[[fr:octobre]]
