*Empty MediaWiki Message*

--- a/Sánzá_ya_yambo.mw
+++ b/Sánzá_ya_yambo.mw
@@ -1,5 +1,5 @@
 {{Sánzá ya yambo}}
-'''Sánza ya yambo''', tǒ ''yanuari'' ezalí [[sánzá (ntángo)|sánzá]] ya mɔ̌kɔ́ o [[mánaka]]. Ezalí na [[mokɔlɔ|mikɔlɔ]] ntúku misáto na mɔ̌kɔ́ (31).
+'''Sánza ya yambo''', tǒ ''yanuari'' ezalí [[sánzá (ntángo)|sánzá]] ya mɔ̌kɔ́ o [[manáka]]. Ezalí na [[mokɔlɔ|mikɔlɔ]] ntúku misáto na mɔ̌kɔ́ (31).
 
 Mokɔlɔ ya yambo o sánzá ya yambo ezalí mokɔlɔ ya ''Bónaná elámu''.
 
