*Empty MediaWiki Message*

--- a/Sánzá_ya_zómi_na_míbalé.mw
+++ b/Sánzá_ya_zómi_na_míbalé.mw
@@ -1,6 +1,9 @@
-{{sánzá}}
 {{Sánzá ya zómi na míbalé}}
+'''Sánza ya yambo''', tǒ ''yanuari'' ezalí [[sánzá (ntángo)|sánzá]] ya mɔ̌kɔ́ o [[manáka]]. Ezalí na [[mokɔlɔ|mikɔlɔ]] ntúku misáto na mɔ̌kɔ́ (31).
 
+Mokɔlɔ ya ntúkú míbalé na mitáno o sánzá ya zómi na míbalé ezalí mokɔlɔ ya [[Mbotáma ya Yesu]] (''Noël'').
+
+{{sánzá}}
 [[af:Desember]]
 [[als:Dezember]]
 [[an:Abiento]]
