*Empty MediaWiki Message*

--- a/Berlin.mw
+++ b/Berlin.mw
@@ -26,6 +26,7 @@ Mbóka tô engúmba '''Berlin''' (/paˈʀi/, ''Berlin'' na lokóta ya [[Lialéma
 [[cv:Берлин]]
 [[cy:Berlin]]
 [[da:Berlin]]
+[[de:Berlin]]
 [[el:Βερολίνο]]
 [[en:Berlin]]
 [[eo:Berlino]]
