--- a/2006.mw
+++ b/2006.mw
@@ -3,6 +3,7 @@
 ==Mbotama==
 
 ==Liwa==
+* 29 oktobele: [[Joseph Kabila|Joseph Kabila Kabange]]: [[Mokambi-Ekólo]] ya [[Kɔ́ngɔ-Kinshasa]] (58% voix)
 
 [[Category:ya 21 sekulɔ]]
 
