*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -40,7 +40,7 @@ calling_code	= 243|
 footnotes 	= [[Image:Congo_Rep_Dem_carte.gif|290px]]|
 }}
 
-'''Republiki ya Kɔ́ngɔ Demokratiki''' ezalí [[esé]] ya káti ya [[Afríka]], ezwamí na ndelo ya ye ya mwa [[sánzá ya motóbá mikɔlɔ 30]] [[1960]], ekólo ya makokí, lipanda, bonsɔ́mí, ekanganí mpé ekabwaní tɛ́, ya bato, ya bokonzi boutí na bato mpé eponi eyamba yɔ̂kɔ tɛ́.
+'''Republiki ya Kɔ́ngɔ Demokratiki''' ezalí [[esé]] ya [[Afríka]] ya [[Mambénga]], ezwamí na ndelo ya ye ya mwa [[sánzá ya motóbá mikɔlɔ 30]] [[1960]], ekólo ya makokí, lipanda, bonsɔ́mí, ekanganí mpé ekabwaní tɛ́, ya bato, ya bokonzi boutí na bato mpé eponi eyamba yɔ̂kɔ tɛ́.
 
 == Lokótá ==
 
