nouveau gouverneur depuis 16 oct 2006

--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -2,7 +2,7 @@
 nom=Engúmba / Etúká ya Kinshasa|
 carte=[[image:DCongoKinshasa.png]]|
 capitale=[[Gombe (Kinshasa)|La Gombe]]|
-gouverneur=M. [[Liwanga Maata]]|
+gouverneur=M. [[Baudoin Liwanga Maata]]|
 supkm2= 9 965|
 lg=[[Lingála]]|
 pop=7 500 000|
