/* Liwa */ 16/10:  Baudoin Liwanga Maata

--- a/2006.mw
+++ b/2006.mw
@@ -3,6 +3,7 @@
 ==Mbotama==
 
 ==Liwa==
+* 16 oktobele:  [[Baudoin Liwanga Maata]]: Gouverneur ya [[Kinsásá]]
 * 29 oktobele: [[Joseph Kabila|Joseph Kabila Kabange]]: [[Mokambi-Ekólo]] ya [[Kɔ́ngɔ-Kinshasa]] (58% voix)
 
 [[Category:ya 21 sekulɔ]]
