--- a/Molɔngɔ́_mwa_komíni_ya_Kinsásá.mw
+++ b/Molɔngɔ́_mwa_komíni_ya_Kinsásá.mw
@@ -46,5 +46,7 @@ Ekakoli monɛ́nɛ : Engumbá [[Kinshasa]] o [[Repubiliki ya Kɔ́ngɔ Demokrati
 
 {{BakominiKinshasa}}
 [[Category:Bakomini ya Kinshasa|*]]
+
+[[de:Liste der Stadtbezirke von Kinshasa]]
 [[en:List of municipalities of Kinshasa]]
 [[fr:Liste des communes de Kinshasa]]
