--- a/Molɔngɔ́_mwa_komíni_ya_Kinsásá.mw
+++ b/Molɔngɔ́_mwa_komíni_ya_Kinsásá.mw
@@ -1,9 +1,9 @@
-Ekakoli monɛ́nɛ : Engumbá [[Kinshasa]] o [[Repubiliki ya Kɔ́ngɔ Demokratiki]]
+Ekakoli monɛ́nɛ : Engumbá [[Kinsásá]] o [[Repubiliki ya Kɔ́ngɔ Demokratiki]]
 
 {| id="kinshasa" cellspacing=0 style="width: 200px; margin: 0 0 5px 1em; float: center; clean: center; background-color:#f7f8ff; padding:5px; border:1px solid #8888aa; border-right-width: 2px; border-bottom-width: 2px; line-height: 1.5em"
 | style="padding: 0.5em" |
 {| align="center" style="background-color: #ccccff" width="95%"
-| align="center" width="100%" | '''Bakomini ya Kinshasa<br />'''
+| align="center" width="100%" | '''Bakomini ya Kinsásá<br />'''
 | style="padding: 5px 10px 5px 5px" | [[Image:Kinshasa-flag.png|60px|Flagge von Kinshasa]]
 |}
 |-
