*Empty MediaWiki Message*

--- a/Molɔngɔ́_mwa_komíni_ya_Kinsásá.mw
+++ b/Molɔngɔ́_mwa_komíni_ya_Kinsásá.mw
@@ -94,6 +94,6 @@ Ekakoli monɛ́nɛ : Engumbá [[Kinsásá]] o [[Repubiliki ya Kɔ́ngɔ Demokrat
 {{BakominiKinshasa}}
 [[Category:Bakomini ya Kinshasa|*]]
 
-[[de:Liste der Stadtbezirke von Kinshasa]]
+[[de:Liste der Gemeinden von Kinshasa]]
 [[en:List of municipalities of Kinshasa]]
 [[fr:Liste des communes de Kinshasa]]
