Add description to language map.

--- a/Lingála.mw
+++ b/Lingála.mw
@@ -1,7 +1,7 @@
 <div style="position:relative;visibility:hidden">---Sidenote START---</div>
 [[Image:LanguageMap-Lingala-Larger Location.png|thumb|right|description]]
-[[Image:Lingala-pn.jpg|thumb|texte manquant pour exemple de langue.]]
-[[Image:Map - DR Congo, major languages.svg|thumb|texte manquant pour exemple de langue.]]
+[[Image:Lingala-pn.jpg|thumb|texte manquant pour exemple de langue]]
+[[Image:Map - DR Congo, major languages.svg|thumb|Carte ya likota ya Republiki ya Kɔ́ngɔ.]]
 
 '''Lingála''' ezalí [[lokótá]] ya bato ba [[Republiki ya Kɔ́ngɔ|Kɔ́ngɔ-Brazzaville]] mpé ba [[Kɔ́ngɔ-Kinshasa]].
 
