*Empty MediaWiki Message*

--- a/Mbóka-mokonzi.mw
+++ b/Mbóka-mokonzi.mw
@@ -10,5 +10,6 @@ Ndakisa : [[Durban]] ezalí engúmba-mokonzí ya [[Kwazulu-Natal]], o ekólo ya 
 [[en:capital city]]
 [[fr:capitale]]
 [[es:capital]]
+[[nl:hoofdstad]]
 
 {{ndámbo}}
