--- a/Mpóko_(esálela).mw
+++ b/Mpóko_(esálela).mw
@@ -6,6 +6,7 @@
 [[category:Esálela]]
 
 [[ar:فأرة]]
+[[be:Мыш (маніпулятар)]]
 [[bg:Мишка (хардуер)]]
 [[bs:Miš (hardver)]]
 [[ca:Ratolí (ordinador)]]
