--- a/Katanga.mw
+++ b/Katanga.mw
@@ -13,7 +13,7 @@ dep=69|
 }}
 
 [[Image:Stamp Katanga 1961 fair 50c.jpg|thumb|A postage stamp of independent Katanga]]
-[[Image:Flag of Katanga.png|thumb|Bɛndɛ́lɛ ya Katanga 1960 - 1963]]
+[[Image:Flag of Katanga.svg|thumb|Bɛndɛ́lɛ ya Katanga 1960 - 1963]]
 
 '''Katanga''' ezali etuka se moko ya [[Kɔ́ngɔ-Kinshasa]].
 
