--- a/Connie_Francis.mw
+++ b/Connie_Francis.mw
@@ -1,2 +1,14 @@
-==External links==
-*[http://www.conniefrancis.nl Connie Francis Site]
+'''Connie Francis''' (''Concetta Rosa Maria Franconero'' *12 desembere [[1938]]) ezali chanteuse na [[Jersey Sika]] na [[Amerika]].
+
+==Tála mpé==
+===Nkásá o libándá===
+[http://www.conniefrancis.nl Connie Francis]
+
+[[de:Connie Francis]]
+[[en:Connie Francis]]
+[[es:Connie Francis]]
+[[eo:Connie Francis]]
+[[fr:Connie Francis]]
+[[it:Connie Francis]]
+[[nl:Connie Francis]]
+[[sv:Connie Francis]]
