--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -302,7 +302,7 @@ __NOTOC__
 |-
 | [[Nauru]] || [[Image:Nauru_coa.png|120px]]
 |-
-| [[Nepal]] || [[Image:Coat of arms of Nepal.png|120px|Nepal COA]]
+| [[Nepal]] || [[Image:Nepal gov logo.png|120px|Nepal COA]]
 |-
 | [[New Zealand]] || [[Image:New_zealand_coa.png|120px|New Zealand COA]]
 |-
