--- a/Nsango_Malámu.mw
+++ b/Nsango_Malámu.mw
@@ -1,1 +1,51 @@
-#[[Sango Malamu]]
+'''Sango Malamu''' (mpé '''evanjile''' na [[ligresi]] εὐαγγέλιον ''evangelion'' = sango malamu), ezali kombo oyo [[Yesu]] ye moko apesaki na sango ye azalaki koteya.<ref>[[Sango Malamu ya Marko|Mark]] 1,14</ref> 
+
+Bato oyo bathngakh mikanda ya Sango Malamu, bayebi 'tè [[mokanda ya Yoane]] ekeseni mingi ná oyo ya [[Matié (evanjelist)|Matié]], [[Marko (evanjelist)|Marko]] pe [[Luka (evanjelist)|Luka]]. Epai na bango, makambo mingi ezali kokukana penza. Boye tozali komituna mituna ebele: kokokana ya boye euti wapi? Bato oyo bakòmaki yango basalaki ndenge nini? Pamba té esika moko té bayebisi soki mukòmi-mokanda azali nani.
+
+Na ebandeli, bayekoli ya Yezu babandaki kosakola makambo oyu bamonaki pe bayokaki: makamwisi oyo Yesu azalaki kosala, mateya na ye, pe mingi penza ndenge Yezu akufaki pe asekwaki.<ref>Tala [[Misala ya Bantoma|Misala]] 2,22-36; 3,13-26;10,34-43 pe b.n.b.</ref> Na kati ya mangomba ya bakristo bateyi ya Sango Malamu bazalaki, moto na moto abandaki kosakola Sango Malhmu na ndenge ye azalaki komona.
+
+Bobele sima ya mwa bambula, bakristo mosusu babandi kokòma masolo yango na mokanda. Kasi mikanda wana ezalaki ndenge moko té: epai mosusu bazalaki koyebisa mingi misala ya Yesu, epai mosusu bazalaki kotingama mingi na maloba na ye.
+
+==Historia==
+Bato mingi na kati ya baoyo bayekolá [[Biblíya]] bamoni 'tè Marko azali moto ya liboso oyo akòmaki Sangn Malamu mobimba, penepene ya bambula soki [[65]].
+
+Sango Malamu ya Matié ná oyo ya Luka ebimaki penepene ya bambula soki [[85]], ezali kolanda makambo nyonso oyo Marko
+akòmaki. Kasi Matié ayebaki pe mikanda mosusu ya mateyh ya Yesu; bamosusu bakanisi 'tè mikanda wana eutaká na ntoma Matié oya bazalaki kobenga pe Levi.<ref>[[Sango Malamu ya Mark|Mark]] 2,14</ref> Nzokande Luka atiaki molende po na kotuna batu oyo balyebaki Yesu, atangaki pe mikanda mosusu oyo akutaki na kati ya ba-eklezya <ref>tala Luka l,l-4</ref>
+
+[[Sango Malamu ya Yoane]] ebimaki penepene ya bambula soli [[90]].
+
+==Tala mpé==
+*[[Sango Malamu ya Matié]]
+*[[Sango Malamu ya Marko]]
+*[[Sango Malamu ya Luka]]
+*[[Sango Malamu ya Yoane]]
+
+<references/>
+
+[[Category:Evanjile]]
+[[Category:Biblíya]]
+
+[[ar:إنجيل]]
+[[ca:Evangeli]]
+[[da:Evangelium]]
+[[dt:Evangelium]]
+[[el:Ευαγγέλιο]]
+[[en:Gospel]]
+[[eo:Evangelio]]
+[[es:Evangelio]]
+[[fr:Évangile]]
+[[ia:Evangelio]]
+[[id:Injil]]
+[[it:Vangelo]]
+[[ja:福音]]
+[[jv:Injil]]
+[[ko:복음서]]
+[[nl:Evangelie]]
+[[pl:Ewangelia]]
+[[pt:Evangelho]]
+[[ru:Евангелие]]
+[[sr:Свето Јеванђеље]]
+[[sv:Evangelium]]
+[[sw:Injili]]
+[[th:อีวานเกเลียน (แก้ความกำกวม)]]
+[[zh:四福音书]]
