*Empty MediaWiki Message*

--- a/Motópi.mw
+++ b/Motópi.mw
@@ -1,6 +1,8 @@
 {{ndámbo}}
 [[Image:Football iu 1996.jpg|250px|right|]]
-[[Motópi]] ezalí [[masano]].
+'''Motópi''' tǒ '''motópe''' ezalí [[lisano]] óyo basanaka o ntáka na [[bótópe]] mɔ̌kɔ́ mpé [[lisangá|masangá]] mábalé lya [[mosani|basani]] zómí na mɔ̌kɔ́.
+
+Lisangá lya basaní lizalí na lotómo ya kotíya bótópe o  ntéi ya potó ya lisangá lisúsu.
 
 [[Category:Masano]]
 [[fr:Football]]
