*Empty MediaWiki Message*

--- a/Motó.mw
+++ b/Motó.mw
@@ -1,3 +1,4 @@
+[[Image:Gray1194.png|thumb|200px|Motó mwa moto]]
 '''Motó'''  ezalí eténi ya likoló lya [[nzóto]]. [[Elongi]] ezalí eténi epái ya libosó ya motó.
 
 {{ndámbo}}
