*Empty MediaWiki Message*

--- a/Motópi.mw
+++ b/Motópi.mw
@@ -1,6 +1,6 @@
 {{ndámbo}}
 [[Image:Football iu 1996.jpg|250px|right|]]
-'''Motópi''' tǒ '''motópe''' ezalí [[lisano]] óyo basanaka o ntáka na [[bótópe]] mɔ̌kɔ́ mpé [[lisangá|masangá]] mábalé lya [[mosani|basani]] zómí na mɔ̌kɔ́.
+'''Motópi''' tǒ '''motópe''' ezalí [[lisano]] óyo basanaka o ntáka na [[bótópe]] mɔ̌kɔ́ mpé [[lisangá|masangá]] mábalé lya [[mosani|basani]] zómí na mɔ̌kɔ́. Basanaka na [[lokolo|makolo]] mpé [[motó]], kasi basanaka na [[lobɔ́kɔ|mabɔ́kɔ]] tɛ́.
 
 Lisangá lya basaní lizalí na lotómo ya kotíya bótópe o  ntéi ya potó ya lisangá lisúsu.
 
