--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -317,7 +317,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * [http://www.ucoprdc.org/ Site de l'Unité de coordination du Projet]
 * [http://www.groupelavenir.net/lingala.htm/ L'Avenir - Basango na Lingala]
 <br clear="all"/>
-{{Bisé ya Afrika}}
+{{Bisé ya Afríka}}
 
 [[af:Demokratiese Republiek van die Kongo]]
 [[am:ኮንጎ ዲሞክራቲክ ሪፑብሊክ]]
