*Empty MediaWiki Message*

--- a/Namibia.mw
+++ b/Namibia.mw
@@ -39,9 +39,9 @@ footnotes 	= |
 '''Namibia''' ezalí [[esé]] na [[nsé]] ya [[Afríka]].
 
 
-{{Bisé ya Afrika}}
+{{Bisé ya Afríka}}
 {{ndámbo}}
-[[Category:Bisé ya Afrika]]
+[[Category:Bisé ya Afríka]]
 [[Category:Esé]]
 [[Category:Namibia|*]]
 
