--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -297,10 +297,6 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 {{Commons|Category:Democratic Republic of the Congo|la République démocratique du Congo}}
 
 * [[Santé en République démocratique du Congo]]
-* [[Category:Afrika]] 
-* [[Category:Bisé ya Afrika]] 
-* [[Category:Republiki ya Kɔ́ngɔ Demokratiki]]
-* [[Category:Kɔ́ngɔ-Kinshasa]]
 <br clear="all"/>
 
 == [[Mankásá o libándá]] ==
@@ -318,6 +314,10 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * [http://www.groupelavenir.net/lingala.htm/ L'Avenir - Basango na Lingala]
 <br clear="all"/>
 {{Bisé ya Afríka}}
+[[Category:Afríka]] 
+[[Category:Bisé ya Afríka]] 
+[[Category:Republiki ya Kɔ́ngɔ Demokratiki]]
+[[Category:Kɔ́ngɔ-Kinshasa]]
 
 [[af:Demokratiese Republiek van die Kongo]]
 [[am:ኮንጎ ዲሞክራቲክ ሪፑብሊክ]]
