--- a/Kongó-Brazzaville.mw
+++ b/Kongó-Brazzaville.mw
@@ -82,10 +82,10 @@ Ekakoli ya molayi: [[Bitúká bya Kɔ́ngɔ]]
 
 
 
-{{Template:Bisé ya Afrika}}
+{{Template:Bisé ya Afríka}}
 
 [[Category:Esé]]
-[[Category:Bisé ya Afrika]]
+[[Category:Bisé ya Afríka]]
 [[Category:Kɔ́ngɔ-Brazzaville]]
 
 [[ar:جمهورية الكونغو]]
