*Empty MediaWiki Message*

--- a/Ejipte.mw
+++ b/Ejipte.mw
@@ -38,16 +38,16 @@ cctld        = [[.eg]] |calling_code    = 20|
 footnotes     =  |
 }}
 
-'''Ejipte''' (arabe: مصر ''Misr'') ezali mabelé ya bapembeni ya [[ebale]] [[Nil]]. 
+'''Ejipte''' tǒ '''Ejipiti''' (arabe: مصر ''Misr'') ezalí mabelé ya bapɛ́mbɛ́ni ya [[ebale]] [[Nil]]. 
 
 
-==Historia==
-Bato na Israel bakómaká baunbu na Ejipte; Nzambe alongolaká bango kuna, na maboko ya [[Moize]].
+==Lisapo==
+Bato na Israel bakómaká baúmbu na Ejipte; Nzambe alongolaká bango kuna, na maboko ya [[Moize]].
 
 
 {{Bisé ya Afrika}}
 
-[[Category:Bisé ya Afrika]]
+[[Category:Bisé ya Afríka]]
 [[Category:Leta]]
 [[Category:Ejipte]]
 
