*Empty MediaWiki Message*

--- a/Santrafríka.mw
+++ b/Santrafríka.mw
@@ -1,3 +1,4 @@
-'''Repubiliki ya Santrafrika''' tǒ '''Santrafrika''' ezalí [[esé]] ya [[Afríka]] ya [[Mambénga]]. 
+'''Repubiliki ya Santrafríka''' tǒ '''Santrafríka''' (''Bê Afríka na [[sango]]) ezalí [[esé]] ya [[Afríka]] ya [[Mambénga]].
+
 {{Bisé ya Afrika}}
 {{ndámbo}}
