*Empty MediaWiki Message*

--- a/Mpótó.mw
+++ b/Mpótó.mw
@@ -1,6 +1,9 @@
 {{Bokokani}}
 
+Mpótó ezalí nkómbó na Erópa, kasi ezalí mpé nkómbó na mikili ya bato bamondɛ́lɛ́.
+
 * [[Erópa]] 
-* [[Amerika]] 
+* [[Ameríka]] 
 * [[Moliki ya weste]] (Erópa + Amerika)
-* [[Portugal]]
+
+[[Category:Jiografi]]
