*Empty MediaWiki Message*

--- a/Mpótó.mw
+++ b/Mpótó.mw
@@ -6,4 +6,4 @@ Mpótó ezalí nkómbó na Erópa, kasi ezalí mpé nkómbó na mikili ya bato b
 * [[Ameríka]] 
 * [[Moliki ya weste]] (Erópa + Amerika)
 
-[[Category:Jiografi]]
+[[Category:Jyografi]]
