*Empty MediaWiki Message*

--- a/Motópi.mw
+++ b/Motópi.mw
@@ -1,8 +1,8 @@
 {{ndámbo}}
-[[Image:Football iu 1996.jpg|250px|right|]]
-'''Motópi''' tǒ '''motópe''' ezalí [[lisano]] óyo basanaka o ntáka na [[bótópe]] mɔ̌kɔ́ mpé [[lisangá|masangá]] mábalé lya [[mosani|basani]] zómí na mɔ̌kɔ́. Basanaka na [[lokolo|makolo]] mpé [[motó]], kasi basanaka na [[lobɔ́kɔ|mabɔ́kɔ]] tɛ́.
+[[Image:Football iu 1996.jpg|thumb|250px|right|Mobɛ́ti-ndembó abɛ́tí mombómbó.]]
+'''Motópi''', '''mótópe''' tǒ '''ndembó''' ezalí [[lisano]] óyo basanaka o ntáka na [[bótópe]] mɔ̌kɔ́ mpé [[lisangá|masangá]] mábalé lya [[mosani|basani]] zómí na mɔ̌kɔ́. Babɛ́ti-ndembó basanaka na [[lokolo|makolo]] mpé [[motó]], kasi basanaka na [[lobɔ́kɔ|mabɔ́kɔ]] tɛ́. Moyambi apekisaka mótópe mokɔ́ta o potó. 
 
-Lisangá lya basaní lizalí na lotómo ya kotíya bótópe o  ntéi ya potó ya lisangá lisúsu.
+Lisangá lya basaní lizalí na lotómo ya kotíya bótópe o ntéi ya potó ya lisangá lisúsu. Bazalí babɛ́ti-ndembó zómí mpé moyambi mɔ̌kɔ́ o ntéi ya lisangá.
 
 [[Category:Masano]]
 [[fr:Football]]
