--- a/Mbuzá.mw
+++ b/Mbuzá.mw
@@ -3,4 +3,4 @@
 == Nkomá mpé Búku ==
 * Kawata Ashem-Tem (2004) Bagó ya lingála mambí ma lokóta : Dictionnaire lingala. Karthala. ISBN 2845864949
 
-[[Category:Ekólo ya Kɔ́ngɔ-Kinshasa]]
+[[Category:Bikólo ya Kɔ́ngɔ-Kinshasa]]
