--- a/Kongo.mw
+++ b/Kongo.mw
@@ -1,8 +1,10 @@
 {{Bokokani}}
 
 [[Image:Congo-Brazzaville-Congo-Kinshasa.png|right]]
-* [[Kɔ́ngɔ-Brazzaville]] (Republiki ya Kɔ́ngɔ, yambo ''République populaire du Congo'' mpé [[Kɔngɔ ya Falansia]])
-* [[Kɔ́ngɔ-Kinshasa]] (Republiki ya Kɔ́ngɔ Demokratiki, yambo [[Zaire]], [[Kɔ́ngɔ bɛlji]] mpé [[Ekólo ya Kɔ́ngɔ ya Bonsɔ́mi]])
+* [[Kɔ́ngɔ-Brazzaville]] (Republiki ya Kɔ́ngɔ) :
+*: yambo ''République populaire du Congo'' mpé [[Kɔngɔ ya Falansia]])
+* [[Kɔ́ngɔ-Kinshasa]] (Republiki ya Kɔ́ngɔ Demokratiki)
+*: yambo [[Zaire]], [[Kɔ́ngɔ bɛlji]] mpé [[Ekólo ya Kɔ́ngɔ ya Bonsɔ́mi]])
 * [[Ekólo Kɔ́ngɔ]], lisangá lya bikólo : Batandu, Bésingombé, Bayombé, Balémfu, Bambata, Bambánzá-Matenke...
 * [[Ebale Kɔ́ngɔ]]
 * [[Mani ya Kɔ́ngɔ]]
