--- a/Léopold_II.mw
+++ b/Léopold_II.mw
@@ -1,6 +1,8 @@
 {{ndámbo}}
 [[Image:LeopoldIIBelgien.jpg|thumb|Léopold II, mani ya Bɛljika]]
-Léopold II (mokɔlɔ 13 ya sánzá 4 o mobú [[1835]] – mokɔlɔ 17 ya sánzá 12 o mobú [[1909]]) azalakí [[mani]] ya [[Bɛ́ljika]]. Akómí mani ya Babɛ́lɛsi o mobú [[1885]], kín’o liwâ ya yě o mobú 1909. Akómí mani ya [[lɛ́ta ya nsɔ́mí ya Kɔ́ngɔ]] ([[Kɔ́ngɔ-Kinshasa]] ya lɛ́lɔ) na [[1885]], kín’o apɛ́sí yangó na Bɛ́ljika o mobú [[1908]].
+'''Léopold II, mani ya Babɛ́lɛsi''' (mokɔlɔ 13 ya sánzá 4 o mobú [[1835]] – mokɔlɔ 17 ya sánzá 12 o mobú [[1909]]), azalakí [[mani]] ya [[Bɛ́ljika]]. Azalakí nkulútu ya [[Charlotte ya Bɛ́ljika|Charlotte, mani ya Mexico]], mpé ndeko ya [[Victoria ya Ingɛlɛ́tɛlɛ|Victoria, mani ya Ingɛlɛ́tɛlɛ]].
+
+Akómí mani ya Babɛ́lɛsi o mobú [[1885]], kín’o liwâ ya yě o mobú 1909. Akómí mani ya [[lɛ́ta ya nsɔ́mí ya Kɔ́ngɔ]] ([[Kɔ́ngɔ-Kinshasa]] ya lɛ́lɔ) na [[1885]], kín’o apɛ́sí yangó na Bɛ́ljika o mobú [[1908]].
 Amvúamí mingi likoló misála mya [[boúmbu]] bazalakí kopɛ́sa bato ya Kɔ́ngɔ : bomɛmi [[mpɛ́mbɛ́ ya nzɔku]] mpé [[linono]].
 
 [[bg:Леополд II (Белгия)]]
