*Empty MediaWiki Message*

--- a/Politíki.mw
+++ b/Politíki.mw
@@ -2,25 +2,25 @@
 [[category:lisangá]]
 [[category:politiki]]
 
-'''Politiki''' ezalí bwányá ya koyángela [[likambo|makambo]] ma ekolo lokóla mibeko mizalí kotinda; kobɔngisa [[bomɔi]] ya [[moto|bato]], bizalela ya bangó; kotambwisa misala mia ekolo, mpe koyokana na bikolo bisusu; ezalí sɔlɔ ndimbola ya politiki.
+'''Politíki''' tǒ '''loléngé ya boyángeli''', ezalí bwányá ya koyángela makambo ma ekólo lokóla mibéko mizalí kotínda ; ya kobɔngisa [[bomɔi]] ya [[moto|bato]], bizalela ya bangó ; ya kotámbwisa misála mya ekólo, mpé ya koyókana na bikólo bisúsu ; ezalí sɔ̂lɔ́ ndimbola ya politíki.
 
-Mwa likebisi litali liloba ''politiki''. Soki toyoki liloba «politiki» to «kosala politiki», tokanisaka nini? Tokanisaka: ''koyiba, kokosa, kosala mabe, kosala mayele''... Kasi politiki ya solo ezali bongo te. Liloba politiki euti na [[ligresi]] (lokótá la [[Gresi]]): ''Polis'' elingi koloba [[mboka]], [[engumba]], [[ekólo]], [[esé]]. Politiki ezali mosala to ntoki ya boyangeli mboka to ekolo. Ezali bwanya to mayele ma koyeba boniboni bayangela mokili mwa bato, boniboni bakamba bato ba ekolo na ndenge elingi kosepelisa bato banso.
+Mwâ likébisi litálí liloba ''politíki''. Sɔ́kí toyókí liloba «politíki» tǒ «kosála politiki», tokanisaka níni ? Tokanisaka : ''koyíba, kokósa, kosála mabé, kosála mayele''... Kasi politíki ya sɔ̂lɔ́ ezalí bôngó tɛ́. Liloba ''politíki'' eútí na [[ligresi]] (lokótá la [[Gresi]]): ''polis'' elingí koloba [[mbóka]], [[engúmba]], [[ekólo]], [[esé]]. Politíki ezalí mosála tǒ ntɔ́ki ya boyángeli mbóka to ekólo. Ezalí bwányá tǒ mayele ma koyéba bóníbóní bayángela mokili mwa bato, bóníbóní bakamba bato ba ekólo na ndéngé elingí kosepelisa bato bánsɔ.
 
-Yango wana, na mosala mwa politiki, moto akoluka malamu mpo ya ye moko mpenza te, mpo ya libota lya ye te, akoluka se bolamu bwa batu banso lisanga.
+Yangó wâná, na mosála mwa politíki, moto akoluka malámu mpɔ̂ ya yê mɔ̌kɔ́ mpenzá tɛ́, mpɔ̂ ya libóta lya yě tɛ́, akoluka sé bolámu bwa batu bánsɔ lisangá.
 
-Mpo ya ''bakonzi ba [[leta]]'', kosenga bato bazala non-viola, elingi koloba mbala mingi kosenga bango basala eloko moko te, ata bazali komona mpasi ndenge na ngenge..., batala se na miso ata babeti to babomi bango. Mpo ya parti politiki iboyi ''bisalela bya leta'', mingi bazali komitanga ba non-viola bobele mpo bazangi mandoki to bibuneli mpo ya kozongisela ''bakonzi ba leta'' violans eye bazali kosala bango. Mpo ya ba Eklezya, soki bazali na ngambo ya bakonzi ba leta, bakoteya non-violans oyo elingi koloba komitika na mpasi.
+Mpɔ̂ ya ''bakonzi ba [[lɛ́ta]]'', kosɛ́nga bato bazala na non-viola, elingí koloba mbala mingi kosɛnga bangó basála elɔ́kɔ mɔ̌kɔ́ tɛ́, âtá bazalí komɔ́na mpási ndéngé na ndéngé..., batála sé na mǐso âtá babɛ́tí tǒ babomí bangó. Mpɔ̂ ya parti politíki ibóyí ''bisálela bya lɛ́ta'', mingi bazalí komítánga ba non-viola bobɛ́lɛ́ mpɔ̂ bazángí mandóki tǒ bibuneli mpɔ̂ ya kozóngisela ''bakonzi ba lɛ́ta'' violans eye bazalí kosála bangó. Mpɔ̂ ya [[ekelézia|bikelézia]], sɔ́kí bazalí na ngámbo ya bakonzi ba lɛ́ta, bakotéya non-violans óyo elingí koloba komítíka na mpási.
 
 
-E.alí na mitindo mingi ya politiki, mpe politiki ekabwaní nzela misato:
+Ezalí na mitíndo mingi ya politíki, mpé politíki ekabwaní nzéla mísató :
 
 === Kapitalismɛ ===
-Nzela ya liboso, politiki ya [[kapitalismɛ]] elingí koloba politiki wapi bokulaka mpe matomba ya mosala mazalí mpɔ na basali tɛ kasi mazalí mpɔ na bomongo ya bokulaka babéngaka bango bakapitalistɛ elingí koloba bakóló-bokulaka mosɔlɔ.
+Nzéla ya libosó, politíki ya [[kapitalismɛ]] elingí koloba politíki wápi bokúlaka mpé matómba ya mosála mazalí mpɔ̂ na basáli tɛ́ kasi mazalí mpɔ̂ na bomongo ya bokulaka babéngaka bangó bakapitalistɛ elingí koloba bakóló-bokulaka mosɔlɔ.
 
 === Sosialisimɛ ===
-Nzela ya mibale, [[sosialisimɛ]] ezalí politiki ékopesa matomba ya mosala na mabɔrɔ ya basali bangó mɔkɔ mpe ékopekisa bokulaka ézala ya mwá liboke ya bato.
+Nzéla ya míbalé, [[sosialisimɛ]] ezalí politíki ékopɛ́sa matómba ya mosála na mabɔrɔ ya basáli bangó mɔ̌kɔ́ mpé ekopekisa bokulaka ezala ya mwâ libóké ya bato.
 
 === Komynisimɛ ===
-Nzela ya misato, [[komynisimɛ]] ezalí politiki ékosenga bokulaka mpe matomba ya mosala mázala mpɔ na bolamu ya lingomba, kasi ékopekisa bokulaka ya moto mɔkɔ.
+Nzéla ya misátó, [[komynisimɛ]] ezalí politíki ekosɛnga bokulaka mpé matómba ya mosála mazala mpɔ̂ na bolámu ya lingómba, kasi ekopekisa bokulaka ya moto mɔ̌kɔ́.
 
 ===Mokango===
 * [[Demokrasi]]
