-Bobóngoli na nkóta

--- a/Ngaliéma.mw
+++ b/Ngaliéma.mw
@@ -1,4 +1,3 @@
-{{Bobóngoli na nkóta}}
 {{Commune RDC 2005|
 nom=Commune de Ngaliema|
 ville=[[Kinshasa]]|
@@ -12,14 +11,15 @@ ProvII=[[Kinshasa|Kinshasa]]|
 ProvIII=[[Kinshasa (province Constitution 2005)|Kinshasa]]
 }}
 
-'''Ngaliema''' ezalí komini na ouest na kátikáti ya [[Kinshasa]] ya [[Repubiliki ya Kɔ́ngɔ Demokratiki]]. La commune s'étire de [[Kintambo]] vers le sud en montant le [[mont Ngaliema]], tout au long de la [[route de Matadi]]. Elle accueille les quartiers suivants :
+'''Ngaliema''' ezalí komini ya límbe na kátikáti ya [[Kinshasa]] ya [[Repubiliki ya Kɔ́ngɔ Demokratiki]]. Ekabwaní o likólo na [[Kintambo]] na [[ngómbá Ngaliema]] mpé na [[nzéla ya Matadi]]. 
 
+Sitási bínéi bizalí :
 * Binza Ozone;
 * Binza Météo;
 * Binza Delvaux;
 * Binza I.P.N.
 
-La commune accueille par ailleurs le [[palais de Marbre]], ancienne résidence principale de [[Mobutu Sese Seko]], et le camp militaire Tshatshi.
+Ndáko-mokonzi ya [[palais de Marbre]], kala ndáko ya [[Mobutu Sese Seko]], mpé  [[camp Tshatshi]].
 
 ==Tála mpé==
 ===Mankasa okati Wikipedia===
