*Empty MediaWiki Message*

--- a/Ngaliéma.mw
+++ b/Ngaliéma.mw
@@ -19,7 +19,7 @@ Sitási bínéi bizalí :
 * Binza Delvaux;
 * Binza I.P.N.
 
-Ndáko-mokonzi ya [[palais de Marbre]], kala ndáko ya [[Mobutu Sese Seko]], mpé  [[camp Tshatshi]].
+Ndáko-mokonzi ya [[palais de Marbre]], kala ndáko ya [[Mobutu Sese Seko]], mpé  [[camp Tshatshi]] bizalí o ntéi ya Ngaliema.
 
 ==Tála mpé==
 ===Mankasa okati Wikipedia===
