*Empty MediaWiki Message*

--- a/Bitúká_bya_Kongó-Kinsásá.mw
+++ b/Bitúká_bya_Kongó-Kinsásá.mw
@@ -1,4 +1,4 @@
-Biteni mikonzi bya [[Kɔ́ngɔ-Kinshasa]] mibengami [[Bituka]] (''Province'' na [[lifalansé]]). Bituka ya Kɔ́ngɔ-Kinshasa bazali:
+Biteni mikonzi bya [[Kɔ́ngɔ-Kinshasa]] mibengami [[Bitúka]] (''Province'' na [[lifalansé]]). Bituka ya Kɔ́ngɔ-Kinshasa bazali:
 
 {|align=center style="text-align:center"
 |
