*Empty MediaWiki Message*

--- a/Mbuma.mw
+++ b/Mbuma.mw
@@ -1,19 +1,17 @@
-[[Image:La Boqueria.JPG|250px|right|thumb|xyz]]
-[[Image:Fruit_Stall_in_Barcelona_Market.jpg|250px|right|thumb|xyz]]
-{{lingála tɛ́}}
-Ici manque un article sur les fruits en générale.
+[[Image:La Boqueria.JPG|250px|right|thumb|Mbuma isúsu]]
+[[Image:Fruit_Stall_in_Barcelona_Market.jpg|250px|right|thumb|Mbuma]]
+'''Mbuma''' tǒ '''ndímo''' ezalí [[mpótó]] ya [[nzeté]] mpé ekoyeí mokóló o [[etápe]] ya nzeté.
 
-----
+== Mbuma isúsu ==
+=== A ===
+* [[ananási]]
 
-La liste des fruits n'est que temporairement ici. Elle sera éffacé d'ici peu. La liste n'est que pour que vous puissiez créer des articles sur les fruits ci-dessous.
-* Veuillez ajouter à la fin de votre article sur un fruit la catégorie (Lien: Category:Mbumba)
+=== E ===
+* [[etabe]]
 
-== A ==
-[[ananasi]]
-
-
-== L ==
-[[likemba]] [[língoló]]
+=== L ===
+* [[likémba]]
+* [[língoló]]
 
 [[Category:Zardɛ]]
 [[Category:Boyebi milona]]
