--- a/India.mw
+++ b/India.mw
@@ -1,7 +1,5 @@
 [[image:flag of India.svg|thumb]]
-'''This article is in english. If you understand english, please translate it to lingála!'''
-{{lingála tɛ́}}
-'''India''' (Devanagari: भारत Bhārat), officially the Republic of India (Bhārata Gaṇarājya), is a country in South Asia. It is the seventh-largest country by geographical area, the second most populous country, and the most populous liberal democracy in the world. India has a coastline of over seven thousand kilometres, bounded by the Indian Ocean on the south, the Arabian Sea on the west, and the Bay of Bengal on the east. India borders Pakistan to the west;China, Nepal and Bhutan to the north-east; and Bangladesh and Myanmar to the east. In the Indian Ocean, India is in the vicinity of Sri Lanka, Maldives and Indonesia.
+'''India''' ezalí [[esé]] ya nsé ya [[Azía]]. Ezalí ekólo ya sambo na bonɛ́nɛ mpé ya míbalé na motánga mwa bato. Ezalí pɛnɛ o [[India (lombú)|lombú India]] óyo azwí nkómbó na yě, pɛnɛ o lombú ya Arabya o límbe, pɛnɛ o Shina, Nepal, Bhutan o likoló mpé monyɛlɛ, mpé pɛnɛ o Bangladesh mpé Myanmar o monyɛlɛ.
 
 [[aa:India]]
 [[ab:India]]
