--- a/Boyíké.mw
+++ b/Boyíké.mw
@@ -1,9 +1,13 @@
-''Boyíké'' elakisi míngi mpó na nkómbó o [[mambí ma lokótá]], ekɛsɛní na [[bɔ̌kɔ́]]. 
+'''Boyíké''' elakísí míngi mpɔ̂ na nkómbó o [[mambí ma lokótá]], ekɛsɛní na [[bɔ̌kɔ́]]. 
 
-Ndakisa : ''moto'' na bɔ̌kɔ́ ezalí ''bato'' na boyíké.
+== Ndakisa ==
+O lokóta la [[lingála]] :
+* « ''moto'' » na bɔ̌kɔ́ ezalí « ''bato'' » na boyíké ;
+* «''loyémbo''» na bɔ̌kɔ́ ezalí «''nzémbo''» na boyíké ;
+* «''tatá''» na bɔ̌kɔ́ ezalí «''batatá''» na boyíké.
 
 == Tálá mpé ==
-* [[nkóndo]] ya nkómbó
+* [[Nkóndo]] ya nkómbó
 * [[Mambí ma lokóta]]
 
 [[Category:Mambí ma lokóta]]
