--- a/Boyíké.mw
+++ b/Boyíké.mw
@@ -6,6 +6,10 @@ O lokóta la [[lingála]] :
 * «''loyémbo''» na bɔ̌kɔ́ ezalí «''nzémbo''» na boyíké ;
 * «''tatá''» na bɔ̌kɔ́ ezalí «''batatá''» na boyíké.
 
+O lokóta la [[falansé]] :
+* « ''homme'' » na bɔ̌kɔ́ ezalí « ''hommes'' » na boyíké, kasi elobámí loléngé mɔ̌kɔ́.
+* « ''cheval'' » na bɔ̌kɔ́ ezalí « ''chevaux'' » na boyíké.
+
 == Tálá mpé ==
 * [[Nkóndo]] ya nkómbó
 * [[Mambí ma lokóta]]
