*Empty MediaWiki Message*

--- a/Biblíya.mw
+++ b/Biblíya.mw
@@ -12,7 +12,7 @@
 **[[Mokapo]]
 **[[Baloma]]
 **[[Misala]]
-**[[Nzembo]] 
+**[[Nzémbo (búku)|Nzémbo]] 
 **[[Yisaya]]
 **[[Yilimiya]]
 **[[Danyele]]
@@ -21,11 +21,11 @@
 **[[Emoniseli]]
 
 *'''Boyokani ya Sika'''
-**[[Sango Malamu ya Matai]]
-**[[Sango Malamu ya Marko]]
-**[[Sango Malamu ya Luka]]
-**[[Sango Malamu ya Yoane]]
-**[[Misala ya Bantoma]]
+**[[Nsango Malamu ya Matai]]
+**[[Nsango Malamu ya Marko]]
+**[[Nsango Malamu ya Luka]]
+**[[Nsango Malamu ya Yoane]]
+**[[Misála ya Bantoma]]
 **[[Mokanda na Baromén]]
 **[[Mokanda ya libosa na Bakorentien]]
 **[[Mokanda ya mibale na Bakorentien]]
@@ -47,14 +47,14 @@
 **[[Mokanda ya mibale na Yoane]]
 **[[Mokanda ya misato na Yoane]]
 **[[Mokanda na Yuda]]
-**[[Koyebisa Basekele]]
+**[[Koyébisa Basékélé]]
 
 
 ==Tála mpé==
 ===Babúku===
 *Biblíya  	ISBN 9966-843-30-2 ABU 	 	  	
 *Biblíya        ISBN 9966-40-879-7 ABRDC-ABU, 2004
-*Boyokani ya sika pe banzembo     ISBN 9966-40-110-5 SBRDC-ABU, 2000<ref>Disponible en Europe en 3 à 4 jours; orthographe sans accents «lingala courant»; traduction oecumenique</ref>
+*Boyokani ya sika pe banzembo     ISBN 9966-40-110-5 SBRDC-ABU, 2000<ref> Disponible en Europe en 3 à 4 jours; orthographe sans accents «lingala courant»; traduction oecumenique</ref>
 *Mokanda na Kondimana na Sika na nkolo na biso Yesu Masiya - Njembo 	ISBN 9966-40-112-1<ref>ya bamisioni</ref>
 
 
