--- a/Maniema.mw
+++ b/Maniema.mw
@@ -1,4 +1,4 @@
-[[image:DCongoManiema.png|right|]]
+[[image:DCongoManiema.png|thumb|right|Etúka ya Maniema]]
 
 '''Maniema''' ezali [[etuka]] ya ekolo [[Kɔ́ngɔ-Kinshasa]].
 
