*Empty MediaWiki Message*

--- a/Bas-Congo.mw
+++ b/Bas-Congo.mw
@@ -13,15 +13,14 @@ dep=25|
 }}
 [[Image:Bas-congo.JPG|thumb|290px|Kitoko ya zamba ya Bas-Congo]]
 
-'''Bas-Congo''' ezali etuka se moko ya [[Kɔ́ngɔ-Kinshasa]] oyo ekangami na mayi-mozindo [[Atalantiki]]. Engumba-mokonzi ya Bas-Congo ezali [[Matadi]]. Ekangami mpe na bikolo ya [[Angola]] na [[Kɔ́ngɔ-Brazzaville]], mpe na etuka Bandundu, elongo na engumbá-etuka ya Kinshasa.
+'''Bas-Congo''' tǒ '''Kɔ́ngɔ ya Nsé''' ezalí etúka sé mɔ̌kɔ́ ya [[Kɔ́ngɔ-Kinshasa]] óyo ekangamí na lombú [[Atalantíki]]. Engúmba-mokonzi ya Bas-Congo ezalí [[Matadi]]. Ekangamí mpé na bikólo ya [[Angola]] na [[Kɔ́ngɔ-Brazzaville]], mpé na etúka Bandundu na engumbá-etuka ya Kinshasa.
 
-Okati wa Bas-Congo, makútání bingumba mingi lokola [[Boma]], [[Moanda]], [[Banana]] and [[Kisantu]].
+O káti ya Bas-Congo, makútání bingúmba mingi lokóla [[Boma]], [[Moanda]], [[Banana]] mpé [[Kisantu]].
 
 ==Tala mpe==
-===Mankasa okati Wikipedia===
-* [[Molongo ya bingumba ya Bas-Congo]]
+* [[Molɔ́ngɔ́ ya bingúmba ya Bas-Congo]]
 
-===Mankasa olibanda Wikipedia===
+=== Nkásá o libándá ===
 * [http://www.bas-congo.org/ Bulamatari ya Bas-Congo]
 * [http://katembo.fragland.net/gallery/cartes/bascongo1.jpg Karta ya Weste ya Bas-Congo] (na lifalansé)
 * [http://katembo.fragland.net/gallery/cartes/bascongo2.jpg Carte ya Este ya Bas-Congo] (na lifalansé)
