*Empty MediaWiki Message*

--- a/Nkɔ́li.mw
+++ b/Nkɔ́li.mw
@@ -1,7 +1,7 @@
 {{ndámbo}}
 
-[[image:Krokodile.png|thumb|180px|right|Nkoli (''Crocodilus niloticus''); in: Meyers Großes Konversationslexikon, 1905-09]]
-'''Nkoli''', '''ngandó''', ezali [[nyama]] ya [[ebale]].
+[[Image:NileCrocodile.jpg|thumb|180px|right|Nkoli míbalé]]
+'''Nkoli''' tǒ '''ngandó''' ezalí [[nyama]] ya [[nzéla ya mái]].
 
 
 [[Category:Nyama]]
