*Empty MediaWiki Message*

--- a/Ekwatéli_(Kongó-Kinsásá).mw
+++ b/Ekwatéli_(Kongó-Kinsásá).mw
@@ -11,9 +11,9 @@ lg=[[Lingala]]|
 ISO=CD-EQ|
 dep=49|
 }}
-'''Ekwatéli''' ezali [[etúká]] ya ekolo [[Kɔ́ngɔ-Kinshasa]]. Ekutanemi na Nor ya ekolo ena, mpe ekangami na [[Kɔ́ngɔ-Brazzaville]] na Weste, [[Santrafrika]] na Nor, etuka [[Orientale]] na Este, elongo na bituka [[Kasai-Oriental]], [[Kasai-Occidental]], na [[Bandundu]] na Sud.  Engumba-mokonzi ya etuka Ekwatéli ezali [[Mbandaka]], engumba mɔkɔ o pene ya ebale [[Kɔ́ngɔ]].
+'''Ekwatéli''' ezalí [[etúká]] ya ekólo [[Kɔ́ngɔ-Kinshasa]]. Ekútánémí na Nor ya ekólo êna, mpé ekangámí na [[Kɔ́ngɔ-Brazzaville]] na Weste, [[Santrafrika]] na Nor, etúka [[Orientale]] na Este, elongo na bitúka [[Kasai-Oriental]], [[Kasai-Occidental]], na [[Bandundu]] na Sud.  Engúmba-mokonzi ya etúka Ekwatéli ezalí [[Mbandaka]], engúmba mɔ̌kɔ́ o pɛnɛ ya ebale [[Kɔ́ngɔ]].
 
-{{ndambo}}
+{{ndámbo}}
 
 {{BiteniKongoKinshasa}}
 [[Category:Kɔ́ngɔ-Kinshasa]]
