*Empty MediaWiki Message*

--- a/Montréal.mw
+++ b/Montréal.mw
@@ -1,5 +1,7 @@
-'''Montréal''' ezalí mbóka tô engúmba ya [[Canada]]. Bato ba Montréal balobaka [[falansé]] mpé [[lokóta la ngɛlɛ́sa]].
+[[Image:CentrevilleMontrealété.jpg|thumb|Katí Montréal]]
+'''Montréal''' ezalí mbóka tô engúmba ya [[Canada]]. Bǎna Montréal balobaka [[falansé]] mpé [[lokóta la ngɛlɛ́sa]]. Ezalí mbóka ya yambo ya monɛ́nɛ ya [[Québec]].
 
+{{ndámbo}}
 [[af:Montréal]]
 [[als:Montréal]]
 [[bg:Монреал]]
