--- a/Mambénga.mw
+++ b/Mambénga.mw
@@ -1,3 +1,4 @@
+{{Bokokani}}
 '''Mambénga''' ezalí :
 * '''[[Mambénga (monkɔlɔ́tɔ)|Mambénga]]''',  monkɔlɔ́tɔ mpé ntáka ya zámba o káti ya [[Mabelé]].
 * '''[[Ekwatéli (etúká)|Etúka ya Mambénga]]''' tǒ '''ya Ekwatéli''' o káti ya [[Kɔ́ngɔ-Kinshasa]]
