*Empty MediaWiki Message*

--- a/Lombú.mw
+++ b/Lombú.mw
@@ -1,11 +1,19 @@
-'''Lombú''' ezalí etánda mpé ntáká enɛ́nɛ ya [[mái]].
+[[Image:Oceans fr.png|thumb|200px|Mbú nyɔ́nsɔ o Mabelé]]
+'''Lombú''' ezalí etánda mpé ntáká enɛ́nɛ ya [[mái]] na [[móngwa]].
 
-Mbú mítáno izalí mái-mozíndo :
-* lombú [[Antartíki]]
-* lombú [[Artíki]]
+Lisangá lya mbú nyɔ́nsɔ lizalí lombú monɛ́nɛ mɔ̌kɔ́ o [[Mabelé]].
+Kási bakɛsɛní mbú mítáno yangó izalí mái-mozíndo :
+* lombú [[Antartíki]] tǒ na malíli o likoló
+* lombú [[Artíki]] tǒ na malíli o nsé
 * lombú [[Atlantíki]]
-* lombú [[India (lombú)|India]]
-* lombú [[Pasifíki]]
+* lombú la [[India (lombú)|India]]
+* lombú [[Pasifíki]] tǒ la Bobóto 
+mpé lombú losúsu :
+* lombú [[Méditeranéa]]
+* lombú la [[Motáné (lombú)|Motáné]]
+* lombú la [[Moyíndo (lombú)|Moyíndo]]
+* ...
+
 
 {{ndámbo}}
 [[en:Sea]]
