--- a/Kamerun.mw
+++ b/Kamerun.mw
@@ -1,3 +1,7 @@
-'''Kamerun''' ezalí [[esé]] ya [[Afríka]] ya [[Mambénga]]. 
+[[Image:LocationCameroon.png|right|Kamerun]]
+'''Kamerun''' (''Cameroun'' o lokóta ya falansé) ezalí [[esé]] ya [[Afríka]] ya [[Mambénga]]. 
 {{Bisé ya Afrika}}
 {{ndámbo}}
+
+[[en:Cameroon]]
+[[fr:Cameroun]]
