--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -50,7 +50,7 @@ Míngi śé na káti ya bakótá bya ekólo bokoyéba etando ya bikelá, mabelé
 
 [[Mongo|Bamongo]] bazalí na bakombo míngi ya nzeté ya mbíla na maye manso basálelaka. Sɔ̂lɔ, nzeté ya mbíla eyébaní káka mpó na mafúta na masanga tɛ̂. Eyébaní lokóla nkísi ekosílisa makɔnɔ, naye mpé bakosála bitúnga mpé bikila kila.
 
-== Likambo ==
+== Lisapo ==
 ''Ekakoli ya molayi : [[Mpo ya Kɔ́ngɔ-Kinshasa]]''
 
 ''Tala mpé: [[Ntangó ya banɔ́kɔ́(Kɔ́ngɔ Demokratiki)]]''
