--- a/Kɔ́ngɔ_belji.mw
+++ b/Kɔ́ngɔ_belji.mw
@@ -2,12 +2,12 @@
 [[Image:Mapcongo1914-2.jpg|thumb|Kongo belji (1914)]]
 
 
-==Tála mpé==
+==Tálá mpé==
 * [[Ntangó ya banɔ́kɔ́ (Kɔ́ngɔ Demokratiki)]]
 {{ndámbo}}
 
 [[Category:Afrika]]
-[[Category:Historia ya Afrika]]
+[[Category:Lisapo ya Afrika]]
 [[Category:Kɔ́ngɔ-Kinshasa]]
 
 [[bg:Белгийско Конго]]
