--- a/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
+++ b/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
@@ -52,4 +52,4 @@ Posa ya bondeko bonene kati ya bikolo ya Afrika mpe ya [[Eropa]] ebandi na mibu 
 [[sv:Belgiska Kongo]]
 
 [[Category:Kɔ́ngɔ-Kinshasa]]
-[[Category:Historia ya Afrika]]
+[[Category:Lisapo ya Afrika]]
