*Empty MediaWiki Message*

--- a/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
+++ b/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
@@ -1,16 +1,14 @@
 [[Image:Hw-stanley.jpg|thumb|Sir Henry Morton Stanley]]
 [[Image:CSKatangaTCongoBel1950a.jpg|thumb|right|Kɔ́ngɔ ya Babelgi, 1950]]
 [[Image:LeopoldIIBelgien.jpg|thumb|250px|right|Léopold II.]]
-[[Image:CongoVillageErased.jpg|thumb|400px|right|Village congolais détruit pour plantation de caoutchouk.]]
-
-Voir aussi [[Ntangó ya banɔ́kɔ́]]
+[[Image:CongoVillageErased.jpg|thumb|400px|right|Mbóka mɔ̌kɔ́ ya Kɔ́ngɔ ebóyá mpɔ̌ na linono.]]
 
 Wuta mobu koto na kama mwambe na tuku mwambe na minei tii mobu koto na kama mwambe na tuku mwambe na mitano, Conférence de Berlin esangisi bana ya [[Eropa]], ya [[America]] mpe ya [[Turkia]] mpona kokamba mibeko mikofungola nzela ya Afrika. 
 Yango epesi mayele na ntoma [[Léopold II]] nakoyebisa mokili mobimba te ebale ya [[Kɔ́ngɔ Demokratiki|Kɔ́ngɔ]] eye ekambami na moleki nzela [[Henry Morton Stanley]], ezali mabele mwa ye mpe na lisanga lya ye. 
 
 Kasi soki na buku ekolo ya Afrika eye eleki na maboko ya mindele elakisi lokola ekolo ya poto, na mibeko mpe na misala ya mbulamatari, solo ezalaki kokambama lokola eloko ya moto moko. 
 
-== État Indépendant du Congo (Ekolo ya Bonsomi ya Kɔ́ngɔ)==
+== État Indépendant du Congo (Lɛ́ta ya nsɔ́mi ya Kɔ́ngɔ)==
 Mapango ma ekolo Kɔ́ngɔ esalami na bokakoli elongo na mindele miye basilaki kozwa ô kati, mabele manene. 
 Ya solo, likambo lya frontière ya Kɔ́ngɔ esengi kotambola ekolo mobimba mpe kokamba bato na bokasi mpe esengaki kozwa bandeko ya miyindo. 
 
@@ -44,6 +42,9 @@ Na sima ya bokono ya mpongi eye ezongaka mbula nyoso, '''minganga''' ya mindele 
 
 == «Mboka ya zomi» mpe dipanda == 
 Posa ya bondeko bonene kati ya bikolo ya Afrika mpe ya [[Eropa]] ebandi na mibu koto na kama libwa na tuku mitano. Mokano ya kobongisa mibeko elingi kokotisa ekolo Kɔ́ngɔ na kati ya mabele ya Belgica. Bato babengi «mboka ya zomi». Mibu mitano na sima ya mobembo monene ya ntoma Baudouin na ekolo Kɔ́ngɔ na mobu koto na kama libwa na tuku mitano na mitano, ekolo Kɔ́ngɔ ezwi dipanda.
+
+== Tálá mpé ==
+* [[Ntangó ya banɔ́kɔ́]]
 
 [[de:Geschichte der Demokratischen Republik Kongo#Belgisch-Kongo]]
 [[en:History of the Democratic Republic of the Congo#The Belgian Congo]]
