*Empty MediaWiki Message*

--- a/Zimbabwe.mw
+++ b/Zimbabwe.mw
@@ -1,7 +1,7 @@
 [[Image:LocationZimbabwe.png|right|Zimbabwe]]
 '''Zimbabwe''' ezalí [[esé]] ya [[nsé]] ya [[Afríka]]. Ekabwaní o likólo na [[Zambia]], o límbe na [[Botswana]], o monyɛlɛ na [[Mozambíki]], o nsé na [[Afríka ya Nsé]].
 
-{{Bisé ya Afrika}}
+{{Bisé ya Afríka}}
 {{ndámbo}}
 [[en:Zambia]]
 [[fr:Zambie]]
