*Empty MediaWiki Message*

--- a/Ejipte.mw
+++ b/Ejipte.mw
@@ -45,7 +45,7 @@ footnotes     =  |
 Bato na Israel bakómaká baúmbu na Ejipte; Nzambe alongolaká bango kuna, na maboko ya [[Moize]].
 
 
-{{Bisé ya Afrika}}
+{{Bisé ya Afríka}}
 
 [[Category:Bisé ya Afríka]]
 [[Category:Leta]]
