--- a/Tsadi.mw
+++ b/Tsadi.mw
@@ -1,7 +1,7 @@
 [[Image:LocationChad.png|right|Tshadi]]
 '''Tshadi''' (''Tchad'' na lokóta la falansé) ezalí [[esé]] ya [[Afríka]] ya [[Mambénga]] mpé ya [[Sahel]]. Ekabwaní o monyɛlɛ na [[Sudani]], o límbe na [[Nijer]], o límbe mpé nsé na [[Nijeria]] mpé [[Kamerun]], o nsé na [[Santrafríka]]. Ezalí pɛnɛ o [[Tshadi (liziba)|liziba Tshadi]].
 
-{{Bisé ya Afrika}}
+{{Bisé ya Afríka}}
 {{ndámbo}}
 [[en:Chad]]
 [[fr:Tchad]]
