*Empty MediaWiki Message*

--- a/Kamerun.mw
+++ b/Kamerun.mw
@@ -1,6 +1,6 @@
 [[Image:LocationCameroon.png|right|Kamerun]]
 '''Kamerun''' (''Cameroun'' o lokóta ya falansé) ezalí [[esé]] ya [[Afríka]] ya [[Mambénga]]. 
-{{Bisé ya Afrika}}
+{{Bisé ya Afríka}}
 {{ndámbo}}
 
 [[en:Cameroon]]
