*Empty MediaWiki Message*

--- a/Santrafríka.mw
+++ b/Santrafríka.mw
@@ -1,4 +1,4 @@
 '''Repubiliki ya Santrafríka''' tǒ '''Santrafríka''' (''Bê Afríka'' na [[sango]]) ezalí [[esé]] ya [[Afríka]] ya [[Mambénga]].
 
-{{Bisé ya Afrika}}
+{{Bisé ya Afríka}}
 {{ndámbo}}
