--- a/Mozambíki.mw
+++ b/Mozambíki.mw
@@ -1,7 +1,7 @@
 [[Image:LocationMozambique.png|right|Mozambíki]]
 '''Mozambíki''' ezalí [[esé]] ya [[nsé]] ya [[Afríka]]. Ekangamí pɛnɛ o lombú la India o monyɛlɛ. Ekabwaní o likólo na [[Tanzania]] mpé [[Malawi]], o límbe na [[Zambia]] mpé [[Zimbabwe]], o nsé na [[Afríka ya Nsé]].
 
-{{Bisé ya Afrika}}
+{{Bisé ya Afríka}}
 {{ndámbo}}
 [[en:Mozambique]]
 [[fr:Mozambique]]
