*Empty MediaWiki Message*

--- a/Afríka.mw
+++ b/Afríka.mw
@@ -4,3 +4,7 @@ Ezalí na bisé ntúkú mínei na motóba.
 {{Bisé ya Afríka}}
 {{ndámbo}}
 [[Category:Jyografi]]
+[[en:Africa]]
+[[fr:Afrique]]
+[[kg:Afelika]]
+[[sw:Afrika]]
