--- a/Afríka.mw
+++ b/Afríka.mw
@@ -1,3 +1,4 @@
+[[Image:LocationAfrica.png|thumb|right|Afríka o káti ya Mabelé]]
 '''Afríka''' ezalí mɔ̌kɔ́ ya [[ntáká ya mabelé|ntáká]] ítáno ya mikili o [[Mabelé]]. Ntáká ya ísáto na bonɛ́nɛ.
 Ezalí na bisé ntúkú mínei na motóba.
 
