*Empty MediaWiki Message*

--- a/Katanga.mw
+++ b/Katanga.mw
@@ -15,7 +15,7 @@ dep=69|
 [[Image:Stamp Katanga 1961 fair 50c.jpg|thumb|A postage stamp of independent Katanga]]
 [[Image:Flag of Katanga.svg|thumb|Bɛndɛ́lɛ ya Katanga 1960 - 1963]]
 
-'''Katanga''' ezali etuka se moko ya [[Kɔ́ngɔ-Kinshasa]].
+'''Katanga''' ezalí etúka sé mɔ̌kɔ́ ya [[Kɔ́ngɔ-Kinshasa]].
 
 {{BiteniKongoKinshasa}}
 
