*Empty MediaWiki Message*

--- a/Ekwatéli_(Kongó-Kinsásá).mw
+++ b/Ekwatéli_(Kongó-Kinsásá).mw
@@ -11,7 +11,7 @@ lg=[[Lingala]]|
 ISO=CD-EQ|
 dep=49|
 }}
-'''Ekwatéli''' ezalí [[etúká]] ya ekólo [[Kɔ́ngɔ-Kinshasa]]. Ekútánémí na Nor ya ekólo êna, mpé ekangámí na [[Kɔ́ngɔ-Brazzaville]] na Weste, [[Santrafrika]] na Nor, etúka [[Orientale]] na Este, elongo na bitúka [[Kasai-Oriental]], [[Kasai-Occidental]], na [[Bandundu]] na Sud.  Engúmba-mokonzi ya etúka Ekwatéli ezalí [[Mbandaka]], engúmba mɔ̌kɔ́ o pɛnɛ ya ebale [[Kɔ́ngɔ]].
+'''Ekwatéli''' tǒ '''Mambénga''' ezalí [[etúká]] ya ekólo [[Kɔ́ngɔ-Kinshasa]]. Ekútánémí na Nor ya ekólo êna, mpé ekangámí na [[Kɔ́ngɔ-Brazzaville]] na Weste, [[Santrafrika]] na Nor, etúka [[Orientale]] na Este, elongo na bitúka [[Kasai-Oriental]], [[Kasai-Occidental]], na [[Bandundu]] na Sud.  Engúmba-mokonzi ya etúka Ekwatéli ezalí [[Mbandaka]], engúmba mɔ̌kɔ́ o pɛnɛ ya ebale [[Kɔ́ngɔ]].
 
 {{ndámbo}}
 
