*Empty MediaWiki Message*

--- a/Lokótá_ya_Nizer-Kongo.mw
+++ b/Lokótá_ya_Nizer-Kongo.mw
@@ -3,7 +3,7 @@
 Die Familie der '''Nkotá ya Nizer-Kongo''' ist eine der vier anerkannten afrikanischen Sprachfamilien und setzt sich aus folgenden Sprachgruppen zusammen:
 
 * Niger-Kongo
-** [[Nkotá ya ##Atlantique ]]
+** [[Nkotá ya Atlantíki]]
 ** [[Nkotá ya Mande]]
 ** [[Nkotá ya Volta-Kongo]]
 *** [[Nkotá ya Benué-Kongo]]
