*Empty MediaWiki Message*

--- a/Kiswahíli.mw
+++ b/Kiswahíli.mw
@@ -28,6 +28,7 @@ Comment améliorer un article sur une langue?
 [[cy:Swahili]]
 [[de:Swahili (Sprache)]]
 [[als:Swahili (Sprache)]]
+[[en:Swahili language]]
 [[es:Suajili]]
 [[eo:Svahila lingvo]]
 [[fa:زبان سواحلی]]
