*Empty MediaWiki Message*

--- a/Líki.mw
+++ b/Líki.mw
@@ -1,3 +1,6 @@
 '''Líki''' (boyíké : '''máki''') tǒ '''líkéi''' lizalí  elɔ́kɔ ebótámí na [[ndɛkɛ]], [[mbísi]], [[nyóka]] mpé [[nyama]] ya máki lisúsu.
 
 {{ndámbo}}
+[[en:Egg]]
+[[es:Huevo]]
+[[fr:Œuf]]
