*Empty MediaWiki Message*

--- a/Líki.mw
+++ b/Líki.mw
@@ -1,4 +1,5 @@
-'''Líki''' (boyíké : '''máki''') tǒ '''líkéi''' lizalí  elɔ́kɔ ebótámí na [[ndɛkɛ]], [[mbísi]], [[nyóka]] mpé [[nyama]] ya máki lisúsu.
+[[Image:Chicken eggs.jpg|thumb|Máki ya nsósó]]
+'''Líki''' (boyíké : '''máki''') tǒ '''líkéi''' lizalí  elɔ́kɔ ebótámí na [[nsósó]], [[ndɛkɛ]], [[mbísi]], [[nyóka]] mpé [[nyama]] ya máki lisúsu.
 
 {{ndámbo}}
 [[en:Egg]]
