*Empty MediaWiki Message*

--- a/Kairo.mw
+++ b/Kairo.mw
@@ -1,5 +1,5 @@
 [[Image:Kairo 001.jpg|300px|thumb|right|Kairo]]
-Mbóka tô engúmba '''Kairo''' (القاهرة ''al-Qāhirah'' na lokóta ya [[liarabe]] ") ezalí mbóka-mokonzi ya [[Ejipte]]. Ezalí engúmba monɛ́nɛ, na milioni 7,7 ya bato (2005).
+Mbóka tô engúmba '''Kairo''' (القاهرة ''al-Qāhirah'' na lokóta ya [[liarabe]] ") ezalí mbóka-mokonzi ya [[Ejipte]]. Ezalí engúmba monɛ́nɛ, na [[efúku]] 7,7 ya bato (2005).
 
 
 [[Category:Ejipte]]
