--- a/Nkóto.mw
+++ b/Nkóto.mw
@@ -4,6 +4,7 @@
 == Tálá mpé ==
 * [[Efúku]] ({{formatnum:1000000}})
 * [[Elúndu]] ({{formatnum:100000}})
+* [[Monkɔkɔ]] ({{formatnum:10000}})
 * [[Nkáma]] ({{formatnum:100}})
 * [[Zómi]]  ({{formatnum:10}})
 
