*Empty MediaWiki Message*

--- a/Nkóto.mw
+++ b/Nkóto.mw
@@ -1,4 +1,4 @@
-'''Nkóto''' tǒ '''míli''' (''mille'' na lokóta falansé), ekomámí {{formatnum:1000}}, ezalí motángo óyo ekokí [[zómí]] yíkínyá na [[nkámá]].
+'''Nkóto''' tǒ '''míli''' (''mille'' na lokóta falansé), ekomámí {{formatnum:1000}}, ezalí [[motángo]] óyo ekokí [[zómí]] yíkínyá na [[nkámá]].
 
 
 == Tálá mpé ==
