*Empty MediaWiki Message*

--- a/Motángo.mw
+++ b/Motángo.mw
@@ -1,3 +1,5 @@
 '''Motángo''' mozalí elɔ́kɔ ya mambí ya kotánga mitúya. Bakomaka mitúya mpé nkóndo na mitángo.
 
 [[fr:Chiffre]]
+
+[[Category:motángo]]
